corrected google link

--- a/firstpage.html
+++ b/firstpage.html
@@ -20,7 +20,7 @@
 
 	</article>
 
-	<a href="www.google.com">This is a link to google
+	<a href="https://www.google.com"target="_google">This is a link to google
 	</a>
 	<a href="mailto:rhonda.warner@sunflair0.com">This is my email</a>
 </body>
