--- a/twinfeats/index.html
+++ b/twinfeats/index.html
@@ -14,6 +14,10 @@
 		<a href="#apps"> Aplications</a>
 		<a href="#contact"> Contact</a>
 	</nav>
+
+<article id="home">
+
+</article>
 </body>
 
 </html>
